examples/nat/gateway.yaml
apiVersion: nat.huaweicloud.crossplane.io/v1alpha1
kind: Gateway
metadata:
  annotations:
    meta.upbound.io/example-id: nat/v1alpha1/gateway
  labels:
    testing.upbound.io/example-name: test
  name: test
spec:
  forProvider:
    description: test for crossplane
    name: crossplane-test
    spec: "1"
    subnetIdSelector:
      matchLabels:
        testing.upbound.io/example-name: subnet
    vpcIdSelector:
      matchLabels:
        testing.upbound.io/example-name: vpc
